[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Ubuntu-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/GUI/MainGUI.gd" type="Script" id=2]
[ext_resource path="res://Scenes/GUI/SettingsView.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="MainScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsView" parent="Panel" instance=ExtResource( 3 )]

[node name="Start" type="Button" parent="Panel" groups=[
"GUI",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = 176.234
margin_right = 69.0
margin_bottom = 228.234
custom_fonts/font = SubResource( 1 )
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseContinue" type="Button" parent="Panel"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -58.5
margin_top = -222.234
margin_right = 58.5
margin_bottom = -202.234
text = "Close / Continue"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Panel/CloseContinue" to="." method="_on_CloseContinue_pressed"]
[connection signal="pressed" from="Panel/CloseContinue" to="." method="_on_Start_pressed"]
